--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,10 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
 
+.subtitle {
+  font-size: medium;
+  color: 'blue';  
+}
 
 button {
   cursor: pointer;  
