fixed css issue

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 .subtitle {
   font-size: medium;
-  color: 'blue';  
+  color: #0000ff;  
 }
 
 button {
